package com.tav.progetto.analysis.core;

import java.util.List;

public class ProjectAnalysisResult {
    public List<ClassAnalysisResult> classResults;
    public int healthScore;
}
