package com.tav.progetto.analysis.core;

public class Violation {
    public String className;
    public String ruleId;
    public String description;
    public Severity severity;
}
